Remove unneeded javadoc options and bump version